# adb-ui-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
server/: Server.java
src/: config.rs  device.rs  main.rs
src/adb/: connection.rs  debug.rs  deploy.rs  device_mgmt.rs  devices.rs  emulator.rs  explorer.rs  fastboot.rs  file_logs.rs  logcat.rs  mirror.rs  mod.rs  screen.rs  shell.rs  tools.rs
src/ui/: app_log.rs  debug.rs  deploy.rs  device_tab.rs  device_tools.rs  explorer.rs  file_logs.rs  helpers.rs  logs.rs  mirror.rs  mod.rs  monitor.rs  privacy.rs  screen.rs  settings.rs  shell.rs
